--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/forms": "^0.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
